# pelvynrobotics

./: .gitignore  README.md  install_deps.sh  monitor_sensors.sh  run_demo.sh  run_sim.sh  stop_demo.sh
docs/: generate_diagrams.py  generate_report.py
patches/: README.md  eeuvsim_gazebo.patch
src/pelvyn_inspection/: package.xml  setup.cfg  setup.py
src/pelvyn_inspection/launch/: full_demo.launch.py
src/pelvyn_inspection/pelvyn_inspection/: fin_teleop.py  mission_config.py  mission_controller.py  odom_tf_broadcaster.py  sensor_dashboard.py  sensor_monitor.py  sonar_simulator.py  stable_mission.py  topic_explorer.py
src/pelvyn_inspection/rviz/: mission.rviz
src/pelvyn_inspection/worlds/: inspection_world.world
